--- a/style.css
+++ b/style.css
@@ -482,3 +482,105 @@
     }
 }   
 
+/* ==================== Welcome Section ====================== */
+
+.Welcome-Section{
+    background: url(./Images/welcome-bg.jpg) no-repeat scroll center center;
+    background-size: cover;
+    position: relative;
+    z-index: 3;
+}
+
+.Welcome-Section::before{
+    content: "";
+    background: url(./Images/w-left-techture.png) no-repeat scroll center center;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 685px;
+    width: 237px;
+    z-index: -1;
+}
+
+.Welcome-Section::after{
+    content: "";
+    background: url(./Images/w-right-techture.png) no-repeat scroll center center;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 701px;
+    width: 250px;
+    z-index: -1;
+
+}
+
+.welcome_bakery_inner{
+    padding: 100px 0px;
+}
+
+.main_title h2{
+    color: #3e606b;
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    font-size: 38px;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+.main_title h2:before {
+    content: "";
+    width: 45px;
+    height: 1px;
+    background: #acb2b4;
+    position: absolute;
+    right: -60px;
+    bottom: 7px;
+}
+
+.main_title p {
+    font-size: 20px;
+    line-height: 30px;
+    font-family: "Lora", serif;
+    color: #242424;
+    margin-bottom: 0px;
+}
+
+.welcome_left_text p {
+    line-height: 26px;
+    color: #797979;
+    font-size: 16px;
+    font-family: "Open Sans", sans-serif;
+    margin-bottom: 35px;
+}
+
+.main_title {
+    padding-bottom: 25px;
+}
+
+.inner_feature_cakes{
+    padding: 80px 0px 100px 0px;
+    position: relative;
+}
+
+.owl-carousel .item{
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.owl-prev,  .owl-next {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid #d0d0d0;
+    text-align: center;
+    line-height: 36px;
+    transition: all 400ms linear 0s;
+}
+
+.cake_feature_slider {
+    position: absolute;
+    right: 0px;
+    top: -68px;
+}
