--- a/style.css
+++ b/style.css
@@ -664,11 +664,7 @@
 
 /* ==================== Our Cakes Section ====================== */
 
-.our_cakes_text {
-    text-align: center;
-}
-
-.our_cakes_text h2 {
+.section-head{
     font-family: "Playfair Display", serif;
     font-weight: bold;
     color: #3e606b;
@@ -676,36 +672,22 @@
     position: relative;
     margin-bottom: 20px;
     padding-bottom: 10px;
-}
-
-.our_cakes_text h2:before {
-    content: "";
-    width: 40px;
-    height: 1px;
-    background: #acb2b4;
-    position: absolute;
-    left: 50%;
-    bottom: 0px;
-    transform: translateX(-50%);
-}
-
-.cake-filter {
     text-align: center;
-    margin-bottom: 55px;
 }
 
-.list-style {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.button-group{
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
 }
 
-.list-style li {
+.button-group .button{
     display: inline-block;
     margin-right: 30px;
 }
 
-.list-style li a {
+.button-group .button button{
     text-align: center;
     font-size: 22px;
     color: #3e606b;
@@ -713,11 +695,15 @@
     font-style: italic;
     font-weight: bold;
     position: relative;
-    display: inline-block;
-    text-decoration: none;
+    border: none;
+    background: none;
 }
 
-.list-style li a::before {
+.button-group:nth-child(4){
+    margin-right: 0;
+}
+
+.button-group .button button::before{
     content: "";
     width: 100%;
     height: 2px;
@@ -730,71 +716,15 @@
     transition: all 400ms linear 0s;
 }
 
-.list-style li.active a:before {
+.button-group .button.active button:before {
     transform: scale(1);
     opacity: 1;
-}
+  }
 
-.cake-filter-full {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-
-.cake-filter-item {
-    padding-left: 15px;
-    padding-right: 15px;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 20%;
-    flex: 0 0 20%;
-    max-width: 20%;
-    margin-bottom: 35px;
-    cursor: pointer;
-}
-
-.cake-filter-text {
-    text-align: center;
-}
-
-.cake-filter-text h4 {
-    font-size: 18px;
-    color: #3e606b;
-    font-family: "Playfair Display", serif;
-    margin-top: 25px;
-    margin-bottom: 0px;
-    transition: all 400ms linear 0s;
-    cursor: pointer;
-}
-
-
-@media (max-width: 991px) {
-    .cake-filter-item {
-        flex: 0 0 25%;
-        max-width: 25%;
-    }
-}
-
-@media (max-width: 767px) {
-    .cake-filter-item {
-        flex: 0 0 33.33%;
-        max-width: 33.33%;
-    }
-}
-
-@media (max-width: 575px) {
-    .cake-filter-item {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-
-    .list-style li {
-        margin-right: 15px;
-    }
-
-
-}
+  .item{
+    margin-bottom: 16px;
+  }
+  
 
 
 /* ==================== Menu Section ====================== */
