--- a/style.css
+++ b/style.css
@@ -476,9 +476,7 @@
     }
 }
 
-@media screen and (max-width: 450px) {
-
-}
+@media screen and (max-width: 450px) {}
 
 @media screen and (max-width: 399px) {
     .slide-content {
@@ -580,9 +578,7 @@
     line-height: 1;
 }
 
-.Featured{
-    margin-top: 100px !important;
-}
+
 
 .owl-carousel .item {
     border-radius: 5px;
@@ -620,9 +616,14 @@
     cursor: pointer;
 }
 
+.item {
+    height: 250px;
+}
+
 .item img {
     transition: 0.3s;
     width: 100%;
+    height: 250px;
 }
 
 .item img:hover {
@@ -669,7 +670,12 @@
 
 /* ==================== Our Cakes Section ====================== */
 
-.section-head{
+.portfolio {
+    margin-top: 150px !important;
+}
+
+
+.section-head h1 {
     font-family: "Playfair Display", serif;
     font-weight: bold;
     color: #3e606b;
@@ -680,19 +686,30 @@
     text-align: center;
 }
 
-.button-group{
+.section-head h1::before {
+    content: "";
+    width: 40px;
+    height: 1px;
+    background: #acb2b4;
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    transform: translateX(-50%);
+}
+
+.button-group {
     list-style: none;
     margin: 0px;
     padding: 0px;
     text-align: center;
 }
 
-.button-group .button{
+.button-group .button {
     display: inline-block;
     margin-right: 30px;
 }
 
-.button-group .button button{
+.button-group .button button {
     text-align: center;
     font-size: 22px;
     color: #3e606b;
@@ -702,13 +719,14 @@
     position: relative;
     border: none;
     background: none;
+    transition: 0.3s;
 }
 
-.button-group .button:nth-child(4){
+.button-group .button:nth-child(4) {
     margin-right: 0;
 }
 
-.button-group .button button::before{
+.button-group .button button::before {
     content: "";
     width: 100%;
     height: 2px;
@@ -724,41 +742,69 @@
 .button-group .button.active button:before {
     transform: scale(1);
     opacity: 1;
-  }
+}
 
-.img-port{
+.item1 img {
     width: 100%;
+    height: 150px;
+
+}
+
+.item1 {
+    height: 150px;
+    overflow: hidden;
+}
+
+.button-group .button.active button {
+    color: #d84070;
 }
 
 
+@media screen and (max-width: 476px) {
+    .button-group .button {
+        margin-right: 0px;
+    }
 
-@media screen and (max-width: 400px){
-    .button-group .button{
-        margin-right: 5px;
+    .button-group .button button{
+        font-size: 19px;
+    }
+
+    .item1 img {
+        height: 100px;
+    
     }
     
+    .item1 {
+        height: 100px;
+    }
+    
+
 }
 
-.item1{
+.item1 {
     padding: 0px 20px !important;
 }
 
-.portfolio-text{
+.portfolio-text {
     margin-top: 10px;
 }
 
-.portfolio-text a{
+.portfolio-text a {
     text-decoration: none;
     color: black;
 }
+
 /* ==================== Menu Section ====================== */
 
+.our_cakes_area {
+    margin-top: 150px !important;
+}
 
-.main_title-menu{
+.main_title-menu {
     text-align: center;
 }
 
-.main_title-menu h2{
+.main_title-menu h2 {
     font-family: "Playfair Display", serif;
     font-weight: bold;
     color: #3e606b;
@@ -770,7 +816,7 @@
 
 
 
-.main_title-menu h2::before{
+.main_title-menu h2::before {
     content: "";
     width: 40px;
     height: 1px;
@@ -782,11 +828,11 @@
 }
 
 
-.Premium-menu{
+.Premium-menu {
     text-align: center;
 }
 
-.Premium-menu h3{
+.Premium-menu h3 {
     font-family: "Playfair Display", serif;
     font-weight: bold;
     color: #3e606b;
@@ -802,24 +848,25 @@
     border-radius: 5px;
     box-shadow: 0px 0px 15px 0px rgba(40, 40, 40, 0.08);
     text-align: center;
-    margin-bottom: 30px;
     height: 340px;
-  }
-  
-  .cake_feature_item .cake_img {
+    /* margin: 0px 20px; */
+    margin-bottom: 30px;
+}
+
+.cake_feature_item .cake_img {
     position: relative;
     cursor: pointer;
     overflow: hidden;
-  }
-  
-  .cake_feature_item .cake_img img {
+}
+
+.cake_feature_item .cake_img img {
     transition: all 300ms ease;
     width: 100%;
     height: 225px;
-    object-fit: cover;
-  }
-  
-  .cake_feature_item .cake_img:before {
+
+}
+
+.cake_feature_item .cake_img:before {
     content: "";
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
@@ -831,33 +878,41 @@
     transition: all 300ms ease;
     z-index: 1;
     opacity: 0;
-  }
-  
-  .cake_feature_item .cake_img:hover img {
+}
+
+.cake_feature_item .cake_img:hover img {
     transform: scale(1.05);
-  }
-  
-  .cake_feature_item .cake_img:hover:before {
+}
+
+.cake_feature_item .cake_img:hover:before {
     opacity: 1;
-  }
-  
-  .cake_feature_item .cake_text {
+}
+
+.cake_feature_item .cake_text {
     position: relative;
     padding: 20px 20px;
     text-transform: capitalize;
-  }
-  
-  .cake_feature_item .cake_text h3 {
+}
+
+.cake_feature_item .cake_text h3 {
     font-size: 18px;
     color: #343434;
     font-family: "Playfair Display", serif;
     font-weight: 600;
-  }
+}
 
-  .cake_feature_item .cake_text span{
+.cake_feature_item .cake_text span {
     color: #797979;
-  }
-  
+}
+
+@media screen and (max-width: 576px) {
+    .cake_feature_item {
+        margin: 0px 20px;
+        margin-bottom: 30px;
+    }
+    
+}
+
 
 
 /* ==================== Services Section ====================== */
@@ -944,3 +999,202 @@
 }
 
 
+/* ==================== About Section ====================== */
+
+.About-Section {
+    margin-top: 150px;
+}
+
+.about h1 {
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    color: #3e606b;
+    font-size: 36px;
+    position: relative;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.about h1::before {
+    content: "";
+    width: 40px;
+    height: 1px;
+    background: #acb2b4;
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    transform: translateX(-50%);
+}
+
+
+
+.about p {
+    font-size: 18px;
+    line-height: 1.8;
+    margin-top: 20px;
+    font-family: sans-serif;
+}
+
+
+/* ==================== Contact Us Section ====================== */
+
+.Contact-Section {
+    margin-top: 150px;
+}
+
+
+.contact h1 {
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    color: #3e606b;
+    font-size: 36px;
+    position: relative;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.contact h1::before {
+    content: "";
+    width: 40px;
+    height: 1px;
+    background: #acb2b4;
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    transform: translateX(-50%);
+}
+
+.contact p {
+    font-family: sans-serif;
+}
+
+.contact-info {
+    margin-top: 40px;
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+
+
+
+
+
+/* ==================== Footer Us Section ====================== */
+
+
+
+
+
+footer {
+    background-color: #2c2c2c;
+    color: #fff;
+    padding: 50px 20px;
+    margin-top: 150px;
+}
+
+.footer-container {
+
+}
+
+.footer-section {
+    flex: 1;
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+
+.footer-section h2 {
+    color: #ff8fab;
+    font-size: 28px;
+}
+
+.footer-section h2 span {
+    color: #7dd3fc;
+}
+
+.footer-section p {
+    margin-top: 15px;
+    font-size: 16px;
+    color: #cccccc;
+}
+
+.social-icons a  {
+    display: inline-block;
+    text-align: center;
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    color: #fff;
+    border: 1px solid #7b7b7c;
+    font-size: 16.92px;
+    line-height: 35px;
+    transition: 0.3s;
+}
+
+.social-icons a:hover {
+    color: #f195b2;
+    border-color: #f195b2;
+}
+
+.footer-section h3 {
+    color: #ff8fab;
+    margin-bottom: 15px;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 14px;
+    color: #aaaaaa;
+}
+
+.social-icons {
+    margin-top: 20px;
+}
+
+.timings p{
+    margin: 0;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        text-align: center;
+    }
+
+    .social-icons {
+        justify-content: center;
+    }
+}
+
+#goToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.4s ease;
+    background-color:#f195b2 ;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  }
+
+  #goToTopBtn i{
+    color: white;
+  }
+  
+  #goToTopBtn.show {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
